@@ -8,6 +8,7 @@ Sim:
  - consider partially reclaimed wrecks nonfresh for area-resurrection commands
  ! remove undocumented BeamLaser range modifier (provided 30% extra when fired by mobile units)
  ! remove legacy (COB, though also affecting Lua) hack allowing units with onlyForward weapons to fire regardless of AimWeapon status
+ - allow CEG trails for crashing aircraft (engine will randomly select from any generators listed in sfxTypes.crashExplosionGenerators)
 
 Lua:
  - let Spring.SelectUnitArray select enemy units with godmode enabled
@@ -71,6 +72,8 @@ Lua:
  - new SDLSetTextInputRect(x, y, w, h), SDLStartTextInput() and SDLStopTextInput() functions for controlling IME input from Lua
  - Add AllowUnitTransport callin. Called when the engine tests whether unit A can transport unit B. Returning true will let
    the engine decide, returning false will force the engine to disallow transportation (for this specific call).
+ - add AllowUnitTransport{Load,Unload} callins for controlling whether unit A can start {un}loading unit B
+ - add AllowUnit{Cloak,Decloak} callins for controlling whether a unit can become {de}cloaked
  - new unit rules param access level, 'typed': between 'inlos' and 'inradar', applicable when the unit has once been in LoS
    and continuously in radar since (same rule as `GetUnitLosState(x).typed` and typed engine icons)
  - the GiveOrder* family of callouts can now accept a number for command params,
